--- a/Groupomania/package.json
+++ b/Groupomania/package.json
@@ -24,8 +24,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.29.0",
     "eslint-plugin-vue": "^9.8.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   },
   "eslintConfig": {
