--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,7 @@
 {
   "css.lint.unknownAtRules": "ignore",
   "css.lint.unknownProperties": "ignore",
-  "css.lint.validProperties": [
-    "@apply"
-  ],
+  "css.lint.validProperties": ["@apply"],
   "less.lint.unknownAtRules": "ignore",
   "less.lint.unknownProperties": "ignore",
   "scss.lint.unknownAtRules": "ignore",
