manager for backend jwt and .env

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 3000
-SECRET_KEY = fhezifugeifugiQUezgfiqhfoiaezgfuafn
+JWT_SECRET = fhezifugeifugiQUezgfiqhfoiaezgfuafn
 DB_NAME = groupomania
 DB_HOST = localhost 
 DB_USER = root 
