--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
   "css.lint.unknownAtRules": "ignore",
   "css.lint.unknownProperties": "ignore",
-  "css.lint.validProperties": ["@apply"],
   "less.lint.unknownAtRules": "ignore",
   "less.lint.unknownProperties": "ignore",
   "scss.lint.unknownAtRules": "ignore",
-  "scss.lint.unknownProperties": "ignore"
+  "scss.lint.unknownProperties": "ignore",
+  "tailwindCSS.lint.invalidVariant": "ignore",
+  "tailwindCSS.lint.invalidTailwindDirective": "ignore"
 }
