--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
-    "sequelize": "^6.25.3"
+    "sequelize": "^6.25.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.5.2"
